[tool.poetry]
name = "asyncio-vedirect-mqtt"
version = "1.1.2"
description = "Publish serial data from ve.direct to an MQTT broker"
authors = ["Mathias Hedberg <mathias@hedberg.io>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/metrafonic/asyncio-vedirect-mqtt"

[tool.poetry.dependencies]
python = "^3.8"
asyncio-mqtt = "^0.12.1"
aioserial = "^1.3.0"
vedirect = {git = "https://github.com/karioja/vedirect.git", rev = "a576848"}
coverage = "^6.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ve-mqtt = 'asyncio_vedirect_mqtt.__main__:main'